[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Fonts/no_virus/No Virus.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Graphics/Textures/old_paper.png" type="Texture" id=2]
[ext_resource path="res://Source/Gameplay/HUD/DeployMenu.gd" type="Script" id=3]
[ext_resource path="res://Source/Button/Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://Source/Menu/HMenu.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 800, 500 )
modulate_color = Color( 0.517647, 0.517647, 0.517647, 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )
LineEdit/colors/clear_button_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
LineEdit/colors/cursor_color = Color( 0.94, 0.94, 0.94, 1 )
LineEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.88, 0.88, 0.88, 0.5 )
LineEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = SubResource( 1 )
LineEdit/styles/normal = SubResource( 1 )
LineEdit/styles/read_only = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 36
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 36
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.137255, 0.137255, 0.137255, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.137255, 0.137255, 0.137255, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=11]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="DeployMenu" type="TextureRect"]
self_modulate = Color( 1, 1, 1, 0.941176 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.5
margin_top = -121.5
margin_right = 220.5
margin_bottom = 121.5
theme = SubResource( 3 )
texture = ExtResource( 2 )
expand = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 260, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginTop" type="ColorRect" parent="Info"]
margin_right = 441.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Info"]
margin_top = 9.0
margin_right = 441.0
margin_bottom = 46.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Deploy"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginMid1" type="ColorRect" parent="Info"]
margin_top = 50.0
margin_right = 441.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="TroopsRange" type="SpinBox" parent="Info"]
margin_top = 59.0
margin_right = 441.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 49 )
min_value = 1.0
value = 1.0
align = 1
suffix = "troops"

[node name="MarginMid2" type="ColorRect" parent="Info"]
margin_top = 112.0
margin_right = 441.0
margin_bottom = 117.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="Country" type="Label" parent="Info"]
margin_top = 121.0
margin_right = 441.0
margin_bottom = 158.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "to Western United States"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginMid3" type="ColorRect" parent="Info"]
margin_top = 162.0
margin_right = 441.0
margin_bottom = 167.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="HMenu" parent="Info" instance=ExtResource( 5 )]
margin_top = 171.0
margin_right = 441.0
margin_bottom = 234.0
size_flags_vertical = 3

[node name="MarginLeft" type="Label" parent="Info/HMenu"]
margin_top = 13.0
margin_bottom = 50.0

[node name="Cancel" parent="Info/HMenu" instance=ExtResource( 4 )]
margin_left = 20.0
margin_right = 200.0
margin_bottom = 63.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
text = "Cancel"
flat = true

[node name="MarginMid" type="Label" parent="Info/HMenu"]
margin_left = 220.0
margin_top = 13.0
margin_right = 220.0
margin_bottom = 50.0

[node name="Deploy" parent="Info/HMenu" instance=ExtResource( 4 )]
margin_left = 240.0
margin_right = 421.0
margin_bottom = 63.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
text = "Deploy"
flat = true

[node name="MarginRight" type="Label" parent="Info/HMenu"]
margin_left = 441.0
margin_top = 13.0
margin_right = 441.0
margin_bottom = 50.0

[node name="MarginBottom" type="ColorRect" parent="Info"]
margin_top = 238.0
margin_right = 441.0
margin_bottom = 243.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[connection signal="value_changed" from="Info/TroopsRange" to="." method="value_changed"]
[connection signal="pressed" from="Info/HMenu/Cancel" to="." method="cancel"]
[connection signal="pressed" from="Info/HMenu/Deploy" to="." method="deploy"]
